tests/ui/parse_function_is_not_path.stderr
error: proc-macro derive panicked
  --> $DIR/parse_function_is_not_path.rs:11:10
   |
11 | #[derive(StructOpt, Debug)]
   |          ^^^^^^^^^
   |
   = help: message: `parse` argument must be a function path
